k8s/wisecow-ingress.yaml
#spec:
#  ingressClassName: nginx
#  tls:
#  - hosts:
#      - wisecow.local
#    secretName: wisecow-tls
#  rules:
#  - host: wisecow.local
#    http:
#      paths:
#      - path: /wisecow
#        pathType: Prefix
#        backend:
#          service:
#            name: wisecow
#            port:
#              number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  labels:
    app: wisecow
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - wisecow.local
      secretName: wisecow-tls
  rules:
    - host: wisecow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 80
